# OCamlPlayground

./: .gitignore  Makefile  README.md
AsyncPlay/: asyncplay.opam
CodeWars/: codewars.install  codewars.opam
CodeWars/codewars/: .merlin  jbuild  maxRot.ml  maxRot.mli  seven.ml  seven.mli  temp.ml
CodeWars/codewars_test/: .merlin  jbuild  maxRotTest.ml  tests.ml
Interp/: interp.opam
Interp/interp/: jbuild  main.ml
Interp/play/: .merlin  main.ml
Interp/tcpserver/: Makefile  hello_world.c  jbuild  sock_helper.mli  test_hello_world  test_hello_world.c
Interp/tcpserver/sock_helper/: test_sock_helper_main.c
asyncplay/src/play/: jbuild
play/: jbuild
tcpserver/: .merlin  c_sock_helper.c  hello_world.h  main.ml  sock_helper.ml
tcpserver/sock_helper/: jbuild
